// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast snapshot (dois temas): claro 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="none"
    style={
      {
        "bottom": 50,
        "left": 16,
        "opacity": 0,
        "position": "absolute",
        "right": 16,
        "transform": [
          {
            "translateY": 24,
          },
        ],
      }
    }
    testID="toast"
  >
    <View
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "borderRadius": 12,
            "padding": 16,
          },
          {
            "borderColor": "#E6E6E9",
            "borderWidth": 1,
            "elevation": 2,
            "shadowColor": "#000000",
            "shadowOffset": {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.06,
            "shadowRadius": 2,
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 12,
          }
        }
      >
        <View />
        <Text
          maxFontSizeMultiplier={1.3}
          style={
            [
              {
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              },
              {
                "color": "#111113",
              },
              {
                "flex": 1,
              },
              null,
            ]
          }
        >
          Categoria salva
        </Text>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`Toast snapshot (dois temas): escuro 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="none"
    style={
      {
        "bottom": 50,
        "left": 16,
        "opacity": 0,
        "position": "absolute",
        "right": 16,
        "transform": [
          {
            "translateY": 24,
          },
        ],
      }
    }
    testID="toast"
  >
    <View
      style={
        [
          {
            "backgroundColor": "#202024",
            "borderRadius": 12,
            "padding": 16,
          },
          null,
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 12,
          }
        }
      >
        <View />
        <Text
          maxFontSizeMultiplier={1.3}
          style={
            [
              {
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              },
              {
                "color": "#F2F2F3",
              },
              {
                "flex": 1,
              },
              null,
            ]
          }
        >
          Categoria salva
        </Text>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;
